
## 1.2.1 - 2025-03-14
### Added
- Analytics and Statistics Dashboard for tracking consent rates and user preferences
- Anti-Ad-Blocker System to ensure cookie banner displays even with ad blockers
- Region-Based Consent Banners with specific rules for different regions
- Auto-Detection of Cookie Data with improved pattern matching
- Enhanced cookie scanning with automatic categorization

### Updated
- Improved Granular Consent Handling with better category management
- Enhanced Google Consent Mode v2 integration with immediate script blocking
- Better cookie category detection and classification
- Improved consent storage reliability

### Fixed
- Fixed banner position handling in JavaScript
- Resolved issues with cookie banner positioning on various themes
- Fixed consent not blocking tracking scripts immediately
- Enhanced consent storage reliability
- Improved anti-ad-blocker functionality

## 1.1.9 - 2025-03-13
### Fixed
- Fixed WP Consent API button to correctly link to documentation
- Fixed dynamic banner categories display
- Fixed marketing cookies handling in "Accept All" consent flow
- Enhanced consent data display with caching plugins
- Fixed marketing category consent status issues
- Added debugging logs for consent management

### Enhancement
- Improved consent data persistence across cached pages
- Added refresh button to consent data display
- Enhanced JavaScript for dynamic cookie categories
- Optimized consent data flow
- Added automatic consent display refresh

## 1.1.8 - 2025-03-12
### Added
- Full PageSpeed Insights and Core Web Vitals optimization
- Deferred banner loading to improve Largest Contentful Paint (LCP)
- Optimized JavaScript execution to minimize First Input Delay (FID)
- Smooth banner animation to prevent Cumulative Layout Shift (CLS)
- Event delegation pattern for improved Interaction to Next Paint (INP)

### Enhancement
- Reduced critical CSS footprint with minimal inline styles